# catsay

./: Cargo.toml  README.md  catfile.txt  output.txt  stdout.txt  strerr.txt
src/: main.rs
tests/: integration_tests.rs
