[package]
name = "cat_say"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A catsay cli tool"
homepage = "https://crates.io/crates/cat_say"

[dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
predicates = "3.1.3"
